Updating gradle and readme files

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
         }
     }
 }
+repositories {
+    jcenter()
+}
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
